--- a/notebooks/baselines.ipynb
+++ b/notebooks/baselines.ipynb
@@ -54,6 +54,8 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -65,12 +67,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-31T13:11:23.395085Z",
-     "start_time": "2025-03-31T13:11:23.392298Z"
+     "end_time": "2025-04-01T10:45:00.515437Z",
+     "start_time": "2025-04-01T10:45:00.509442Z"
     }
    },
    "id": "97cf263c2181583a",
-   "execution_count": 8
+   "execution_count": 46
   },
   {
    "cell_type": "code",
@@ -448,6 +450,19 @@
    "execution_count": 17
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "В наших данных нет никакой временных меток, так что мы будем уповать на хорошее случайное разбиение на трейн и тест (вообще говоря, возможны утечки. Данные о будущих интеракциях могут попасть в трейн)\n",
+    "1. Мы включим в трейн и тест одних и тех же юзеров и не будем пока что проверять холодный старт.\n",
+    "2. Мы сделаем срез по юзерам с небольшим числом интеракций\n",
+    "3. Мы будем считать тест интеракциями юзеров после показа рекомендаций."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "cd450535c94eac2c"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
@@ -464,16 +479,6 @@
    },
    "id": "2741b66e741e698",
    "execution_count": 18
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Разделили данные случайно (так как не имеем временных меток) и отфильтровали по юзеру"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "211b94ac3f7cf49e"
   },
   {
    "cell_type": "markdown",
@@ -537,7 +542,7 @@
     "1. Precision@k, MeanAveragePrecision, nDCG\n",
     "\n",
     "Метрики рекомендаций:\n",
-    "1. Diversity, novelty, coverage, serendipity\n",
+    "1. ILS (Diversity), Serendipity\n",
     "\n",
     "К сожалению, в рамках курсача невозможно оценить бизнес-метрики"
    ],
@@ -785,6 +790,16 @@
   {
    "cell_type": "markdown",
    "source": [
+    "Популярность"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fef857e5aee88fab"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "Для метрики ILS для оценки разнообразия "
    ],
    "metadata": {
@@ -796,13 +811,65 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "from rectools.metrics import calc_metrics\n",
     "from rectools.metrics.distances import PairwiseDistanceCalculator\n",
-    "from rectools.metrics import IntraListDiversity"
+    "from rectools.metrics.diversity import DiversityMetric\n",
+    "from rectools.metrics.novelty import NoveltyMetric\n",
+    "from rectools.metrics.serendipity import SerendipityMetric\n",
+    "\n",
+    "\n",
+    "# TODO передаем калькулятор от некой матрицы Эмбеддингов"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "b671ce60fefe4196"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "def calc_metrics_(candidates_df, rank_col: str, k: int) -> Dict[str, float]:\n",
+    "    metrics = {\n",
+    "        f\"ndcg@{k}\": NDCG(k=k),\n",
+    "        f\"map@{k}\": MAP(k=k),\n",
+    "        f\"precision@{k}\": Precision(k=k),\n",
+    "        f\"recall@{k}\": Recall(k=k),\n",
+    "        f\"novelty@{k}\": NoveltyMetric(k=k),\n",
+    "    }\n",
+    "    return calc_metrics(\n",
+    "        metrics=metrics,\n",
+    "        reco=(\n",
+    "            candidates_df.rename(columns={rank_col: Columns.Rank})[\n",
+    "                [Columns.User, Columns.Item, Columns.Rank]\n",
+    "            ][candidates_df[Columns.User].isin(test_users)]\n",
+    "        ),\n",
+    "        interactions=(\n",
+    "            ranker_data[[Columns.User, Columns.Item, Columns.Datetime, Columns.Weight]][\n",
+    "                ranker_data[Columns.User].isin(test_users)\n",
+    "            ]\n",
+    "        ),\n",
+    "        prev_interactions=(\n",
+    "            base_models_data[\n",
+    "                [Columns.User, Columns.Item, Columns.Datetime, Columns.Weight]\n",
+    "            ][base_models_data[Columns.User].isin(test_users)]\n",
+    "        ),\n",
+    "        # У нас есть датасет test_users. Надо понять, как мы его получаем. Возможно, мы просто оставляем часть юзеров под тест, а трейн не видел ни одного из них.\n",
+    "        # При этом у нас нет множественных интеракций.\n",
+    "        # Также данные base_models_data, ranker_data\n",
+    "        # Здесь мы делаем сплит по времени\n",
+    "        catalog=items[\"item_id\"].unique(),\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "models_metrics: Dict[str, Dict[str, float]] = dict()\n",
+    "models_metrics[\"lfm\"] = calc_metrics_(candidates, \"lfm_rank\")\n",
+    "models_metrics[\"pop\"] = calc_metrics_(candidates, \"pop_rank\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "39e93a320c6d33e4"
   },
   {
    "cell_type": "markdown",
@@ -813,6 +880,138 @@
     "collapsed": false
    },
    "id": "af4923b2e3714714"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Создадим модель для Implicit ALS"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "412bd15aca54e3b1"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from rectools.models import ImplicitALSWrapperModel\n",
+    "from implicit.als import AlternatingLeastSquares\n",
+    "\n",
+    "os.environ[\"OPENBLAS_NUM_THREADS\"] = \"1\"\n",
+    "base_model = AlternatingLeastSquares(\n",
+    "    factors=100,\n",
+    "    regularization=0.01,\n",
+    "    alpha=1.0,\n",
+    "    calculate_training_loss=True\n",
+    ")\n",
+    "implicit_als_model = ImplicitALSWrapperModel(base_model, verbose=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-04-01T10:45:16.265818Z",
+     "start_time": "2025-04-01T10:45:16.258833Z"
+    }
+   },
+   "id": "3bb1b5eb971feb3d",
+   "execution_count": 48
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "В данных в колонке Weight я передаю сырые взаимодействия Rui.\n",
+    "Pui рассчитывается автоматически: \n",
+    "- Pui = 1, если Rui > 0\n",
+    "- Pui = 0 иначе\n",
+    "\n",
+    "Далее Cui = 1 + alpha * Pui"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "618b9fea462c12ce"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/15 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "5ec3a9fa30d74cb8a1e4bb9261984b03"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<rectools.models.implicit_als.ImplicitALSWrapperModel at 0x1972eb76c60>"
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "implicit_als_model.fit(\n",
+    "    Dataset.construct(df_train.groupby([Columns.User, Columns.Item]).max().reset_index())\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-04-01T11:00:08.959695Z",
+     "start_time": "2025-04-01T10:59:43.215568Z"
+    }
+   },
+   "id": "7dd9a67ce5bb434c",
+   "execution_count": 49
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Some indices do not exist'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mKeyError\u001B[39m                                  Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[55]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m recs = \u001B[43mimplicit_als_model\u001B[49m\u001B[43m.\u001B[49m\u001B[43mrecommend\u001B[49m\u001B[43m(\u001B[49m\n\u001B[32m      2\u001B[39m \u001B[43m    \u001B[49m\u001B[43musers\u001B[49m\u001B[43m=\u001B[49m\u001B[43mdf_test\u001B[49m\u001B[43m[\u001B[49m\u001B[43mColumns\u001B[49m\u001B[43m.\u001B[49m\u001B[43mUser\u001B[49m\u001B[43m]\u001B[49m\u001B[43m.\u001B[49m\u001B[43munique\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m      3\u001B[39m \u001B[43m    \u001B[49m\u001B[43mdataset\u001B[49m\u001B[43m=\u001B[49m\u001B[43mDataset\u001B[49m\u001B[43m.\u001B[49m\u001B[43mconstruct\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdf_test\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m      4\u001B[39m \u001B[43m    \u001B[49m\u001B[43mk\u001B[49m\u001B[43m=\u001B[49m\u001B[32;43m10\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[32m      5\u001B[39m \u001B[43m    \u001B[49m\u001B[43mfilter_viewed\u001B[49m\u001B[43m=\u001B[49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\n\u001B[32m      6\u001B[39m \u001B[43m)\u001B[49m\n\u001B[32m      8\u001B[39m pd.DataFrame([\n\u001B[32m      9\u001B[39m     score(MAP(k=\u001B[32m10\u001B[39m), recs, df_test),\n\u001B[32m     10\u001B[39m     score(NDCG(k=\u001B[32m10\u001B[39m), recs, df_test)\n\u001B[32m     11\u001B[39m ], index=[\u001B[33m\"\u001B[39m\u001B[33mMAP\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mNDCG\u001B[39m\u001B[33m\"\u001B[39m])\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\IT Products\\B2BRecommender\\.venv\\Lib\\site-packages\\rectools\\models\\base.py:473\u001B[39m, in \u001B[36mModelBase.recommend\u001B[39m\u001B[34m(self, users, dataset, k, filter_viewed, items_to_recommend, add_rank_col, on_unsupported_targets)\u001B[39m\n\u001B[32m    470\u001B[39m reco_warm = \u001B[38;5;28mself\u001B[39m._adjust_reco_types(reco_warm)\n\u001B[32m    471\u001B[39m reco_cold = \u001B[38;5;28mself\u001B[39m._adjust_reco_types(reco_cold, target_type=dataset.user_id_map.external_dtype)\n\u001B[32m--> \u001B[39m\u001B[32m473\u001B[39m reco_hot_final = \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43m_reco_to_external\u001B[49m\u001B[43m(\u001B[49m\u001B[43mreco_hot\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdataset\u001B[49m\u001B[43m.\u001B[49m\u001B[43muser_id_map\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdataset\u001B[49m\u001B[43m.\u001B[49m\u001B[43mitem_id_map\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    474\u001B[39m reco_warm_final = \u001B[38;5;28mself\u001B[39m._reco_to_external(reco_warm, dataset.user_id_map, dataset.item_id_map)\n\u001B[32m    475\u001B[39m reco_cold_final = \u001B[38;5;28mself\u001B[39m._reco_items_to_external(reco_cold, dataset.item_id_map)\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\IT Products\\B2BRecommender\\.venv\\Lib\\site-packages\\rectools\\models\\base.py:728\u001B[39m, in \u001B[36mModelBase._reco_to_external\u001B[39m\u001B[34m(cls, reco, target_id_map, item_id_map)\u001B[39m\n\u001B[32m    726\u001B[39m target_ids, item_ids, scores = reco\n\u001B[32m    727\u001B[39m target_ids = target_id_map.convert_to_external(target_ids)\n\u001B[32m--> \u001B[39m\u001B[32m728\u001B[39m item_ids = \u001B[43mitem_id_map\u001B[49m\u001B[43m.\u001B[49m\u001B[43mconvert_to_external\u001B[49m\u001B[43m(\u001B[49m\u001B[43mitem_ids\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    729\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m target_ids, item_ids, scores\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\IT Products\\B2BRecommender\\.venv\\Lib\\site-packages\\rectools\\dataset\\identifiers.py:221\u001B[39m, in \u001B[36mIdMap.convert_to_external\u001B[39m\u001B[34m(self, internal, strict, return_missing)\u001B[39m\n\u001B[32m    188\u001B[39m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34mconvert_to_external\u001B[39m(\n\u001B[32m    189\u001B[39m     \u001B[38;5;28mself\u001B[39m, internal: InternalIds, strict: \u001B[38;5;28mbool\u001B[39m = \u001B[38;5;28;01mTrue\u001B[39;00m, return_missing: \u001B[38;5;28mbool\u001B[39m = \u001B[38;5;28;01mFalse\u001B[39;00m\n\u001B[32m    190\u001B[39m ) -> tp.Union[np.ndarray, tp.Tuple[np.ndarray, np.ndarray]]:\n\u001B[32m    191\u001B[39m \u001B[38;5;250m    \u001B[39m\u001B[33;03m\"\"\"\u001B[39;00m\n\u001B[32m    192\u001B[39m \u001B[33;03m    Convert any sequence of internal ids to array of external ids (map internal -> external).\u001B[39;00m\n\u001B[32m    193\u001B[39m \n\u001B[32m   (...)\u001B[39m\u001B[32m    219\u001B[39m \u001B[33;03m        If `strict` and `return_missing` are both ``True``.\u001B[39;00m\n\u001B[32m    220\u001B[39m \u001B[33;03m    \"\"\"\u001B[39;00m\n\u001B[32m--> \u001B[39m\u001B[32m221\u001B[39m     result = \u001B[43mget_from_series_by_index\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43mto_external\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43minternal\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mstrict\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mreturn_missing\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    222\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m result\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\IT Products\\B2BRecommender\\.venv\\Lib\\site-packages\\rectools\\utils\\indexing.py:127\u001B[39m, in \u001B[36mget_from_series_by_index\u001B[39m\u001B[34m(series, ids, strict, return_missing)\u001B[39m\n\u001B[32m    125\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m strict:\n\u001B[32m    126\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m r.isna().any():\n\u001B[32m--> \u001B[39m\u001B[32m127\u001B[39m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m(\u001B[33m\"\u001B[39m\u001B[33mSome indices do not exist\u001B[39m\u001B[33m\"\u001B[39m)\n\u001B[32m    128\u001B[39m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m    129\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m return_missing:\n",
+      "\u001B[31mKeyError\u001B[39m: 'Some indices do not exist'"
+     ]
+    }
+   ],
+   "source": [
+    "recs = implicit_als_model.recommend(\n",
+    "    users=df_test[Columns.User].unique(),\n",
+    "    dataset=Dataset.construct(df_test),\n",
+    "    k=10,\n",
+    "    filter_viewed=False\n",
+    ")\n",
+    "\n",
+    "pd.DataFrame([\n",
+    "    score(MAP(k=10), recs, df_test),\n",
+    "    score(NDCG(k=10), recs, df_test)\n",
+    "], index=[\"MAP\", \"NDCG\"])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-04-01T11:03:25.623396Z",
+     "start_time": "2025-04-01T11:03:25.284053Z"
+    }
+   },
+   "id": "75b5c43f61f9021c",
+   "execution_count": 55
   },
   {
    "cell_type": "markdown",
