--- a/notebooks/baselines.ipynb
+++ b/notebooks/baselines.ipynb
@@ -455,12 +455,59 @@
     "В наших данных нет никакой временных меток, так что мы будем уповать на хорошее случайное разбиение на трейн и тест (вообще говоря, возможны утечки. Данные о будущих интеракциях могут попасть в трейн)\n",
     "1. Мы включим в трейн и тест одних и тех же юзеров и не будем пока что проверять холодный старт.\n",
     "2. Мы сделаем срез по юзерам с небольшим числом интеракций\n",
-    "3. Мы будем считать тест интеракциями юзеров после показа рекомендаций."
+    "3. Мы будем считать тест интеракциями юзеров после показа рекомендаций.\n",
+    "\n",
+    "ОЗАРЕНИЕ:\n",
+    "Пусть в тест попадает только часть юзеров из трейна, но с другими интеракциями.\n",
+    "Модель ALS вообще не обращает внимание на то, какие интеракции были у юзеров. Она использует только выученные представления, а их она получаеь по ID из трейна.\n",
+    "\n",
+    "Интеракции делим на трейн для модели первого уровня и тренй для ранкера.\n",
+    "Трейн для моделей первого уровня не пересекается с трейном для ранкера.\n",
+    "Дальше делим юзеров на трейновых, валидационных и тестовых.\n",
+    "Кажется, так сможем проверить холодный старт. \n"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "cd450535c94eac2c"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Рома учит lightFM (я беру на заметку) на данных base_models_data (это все интеракции всех юзеров до определенной даты)\n",
+    "Потом он применяется ровно на тех же данных, берет users.unique(), то есть вообще всех юзеоров.\n",
+    "\n",
+    "candidates - рекомендации айтемов для всех юзеров.\n",
+    "Оставляем юзеров только из test_users.\n",
+    "\n",
+    "interactions - интеракции из ranker_data (как бы будущие)\n",
+    "\n",
+    "prev_interactions - интеракции из base_models_data (как бы прошедшие). На них мы и учились.\n",
+    "\n",
+    "Вопросы:\n",
+    "1. Отделяем мы юзеров для ранкера для тестирования холодного старта?\n",
+    "2. Данные после мы считаем пришедшими с прода?\n",
+    "\n",
+    "Он делает предсказания на трейне и мерджит с тестом.\n",
+    "Ну а какой смысл, если там те же юзеры? Разве что в тесте могут быть другие интеракции для тех же юзеров.\n",
+    "\n",
+    "У нас есть набор юзеров. Пусть он не меняется во времени.\n",
+    "Задача рекомендательных систем - прогнозировать интеракции наперед.\n",
+    "Мы видим текущую прошедшую интеракций, мы учимся на ней.\n",
+    "Мы берем кусок времени после этой истории интеракций для валидации / теста.\n",
+    "Наша цель - предсказать новые интеракции юзера. \n",
+    "Соответствено, в тестовый сет мы включаем следующий кусок данных, где у юзера наблюдаются какие-то новые интеракции.\n",
+    "Разбиение без учета времени не совсем бесполезно, но оно слабо отражает реальность.\n",
+    "\n",
+    "Мы не рекоммендуем юзеру то, что он уже видел в обучающем сете.\n",
+    "\n",
+    "\n",
+    "В отдельный сет можно положить некие интеракции новых юзеров, чтобы протестировать холодный старт.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4483a0eec0c1f561"
   },
   {
    "cell_type": "code",
